--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,15 +10,22 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.2.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "reducers": "^3.0.0-alpha",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
+    "scss": "^0.2.4",
+    "scss-loader": "^0.0.1",
     "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.75.0"
   },
   "scripts": {
     "start": "react-scripts start",
